refactor: remove payment module, refactor java version